--- a/vscode/extension/.templates/extension/.vscode/launch.json
+++ b/vscode/extension/.templates/extension/.vscode/launch.json
@@ -2,35 +2,35 @@
 // Use IntelliSense to learn about possible attributes.
 // Hover to view descriptions of existing attributes.
 // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-{
+{{
 	"version": "0.2.0",
 	"configurations": [
-		{
+		{{
 			"name": "Run Extension",
 			"type": "extensionHost",
 			"request": "launch",
-			"runtimeExecutable": "${execPath}",
+			"runtimeExecutable": "${{execPath}}",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
+				"--extensionDevelopmentPath=${{workspaceFolder}}"
 			],
 			"outFiles": [
-				"${workspaceFolder}/out/**/*.js"
+				"${{workspaceFolder}}/out/**/*.js"
 			],
 			"preLaunchTask": "npm: watch"
-		},
-		{
+		}},
+		{{
 			"name": "Extension Tests",
 			"type": "extensionHost",
 			"request": "launch",
-			"runtimeExecutable": "${execPath}",
+			"runtimeExecutable": "${{execPath}}",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}",
-				"--extensionTestsPath=${workspaceFolder}/out/test/suite/index"
+				"--extensionDevelopmentPath=${{workspaceFolder}}",
+				"--extensionTestsPath=${{workspaceFolder}}/out/test/suite/index"
 			],
 			"outFiles": [
-				"${workspaceFolder}/out/test/**/*.js"
+				"${{workspaceFolder}}/out/test/**/*.js"
 			],
 			"preLaunchTask": "npm: watch"
-		}
+		}}
 	]
-}
+}}
