--- a/vscode/extension/.templates/extension/tsconfig.json
+++ b/vscode/extension/.templates/extension/tsconfig.json
@@ -1,5 +1,5 @@
-{
-	"compilerOptions": {
+{{
+	"compilerOptions": {{
 		"module": "commonjs",
 		"target": "es6",
 		"outDir": "out",
@@ -13,9 +13,9 @@
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	},
+	}},
 	"exclude": [
 		"node_modules",
 		".vscode-test"
 	]
-}
+}}
