Write the author to package.json only if set.

--- a/vscode/extension/.templates/extension/package.json
+++ b/vscode/extension/.templates/extension/package.json
@@ -1,9 +1,7 @@
 {{
     "name": "{name}",
+    "publisher": "",
     "version": "{version}",
-    "author": {{
-        "name": "{author}"
-    }},
     "license": "{license}",
     "engines": {{
         "vscode": "^{minvscode}"
