--- a/vscode/extension/project/.templates/extension/package.json
+++ b/vscode/extension/project/.templates/extension/package.json
@@ -12,7 +12,8 @@
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"package": "vsce package -o ms-python-insiders.vsix"
 	}},
 	"devDependencies": {{
 		"@types/glob": "^7.1.1",
