Add a "publisher" field to the config.

--- a/vscode/extension/project/.templates/extension/package.json
+++ b/vscode/extension/project/.templates/extension/package.json
@@ -1,6 +1,6 @@
 {{
     "name": "{name}",
-    "publisher": "???",
+    "publisher": "{publisher}",
     "version": "{version}",
     "license": "{license}",
     "engines": {{
