Add "repo" to the config.

--- a/vscode/extension/project/.templates/extension/package.json
+++ b/vscode/extension/project/.templates/extension/package.json
@@ -3,6 +3,10 @@
     "publisher": "{publisher}",
     "version": "{version}",
     "license": "{license}",
+    "repository": {{
+        "type": "git",
+        "url": "{repo}"
+    }},
     "engines": {{
         "vscode": "^{minvscode}"
     }},
